--- a/1.md
+++ b/1.md
@@ -1,5 +1,9 @@
 # Processo de Boot
 
+```
+man bootup
+```
+
 ## Firmware
 
 Firmware é um tipo de software que vem instalado no hardware e geralmente em um tipo de memória não volátil. Atualmente, para o processo de boot, existe dois tipos de firmware, BIOS e UEFI.
